syntax = "proto3";

package ni.panels.v1;

option cc_enable_arenas = true;
option csharp_namespace = "NationalInstruments.Panels.V1";
option go_package = "panelsv1";
option java_multiple_files = true;
option java_outer_classname = "PanelsProto";
option java_package = "com.ni.panels.v1";
option objc_class_prefix = "NIPS";
option php_namespace = "NI\\Panels\\V1";
option ruby_package = "NI::Panels::V1";

message BoolCollection {
  repeated bool values = 1;
}

message ByteStringCollection {
  repeated bytes values = 1;
}

message FloatCollection {
  repeated double values = 1;
}

message IntCollection {
  repeated sint64 values = 1;
}

message StringCollection {
  repeated string values = 1;
}
